--- a/Android/res/layout/challengedialog.xml
+++ b/Android/res/layout/challengedialog.xml
@@ -68,8 +68,8 @@
             android:paddingTop="2dp"
             android:text="123"
             android:textColor="#ffffff"
-            android:textSize="10pt"
-            android:width="99px" />
+            android:textSize="22sp"
+            android:width="65dp" />
 
         <TextView
             android:id="@+id/piggies"
@@ -82,8 +82,8 @@
             android:paddingTop="2dp"
             android:text="123"
             android:textColor="#ffffff"
-            android:textSize="10pt"
-            android:width="99px" />
+            android:textSize="22sp"
+            android:width="65dp" />
 
     </RelativeLayout>
 
