--- a/Android/res/layout/drawcanvas.xml
+++ b/Android/res/layout/drawcanvas.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50px" android:layout_marginBottom="5dp">
+        android:layout_height="35dp" android:layout_marginBottom="5dp">
 
         <TextView
             android:id = "@+id/title"
