Added Palettes, added column resolution at table draws

--- a/Server/app/views/draws/index.html.erb
+++ b/Server/app/views/draws/index.html.erb
@@ -13,6 +13,7 @@
     <th>Challenge</th>
     <th>Description</th>
     <th>Password</th>
+    <th>Resolution</th>
     <th></th>
     <th></th>
     <th></th>
@@ -31,6 +32,7 @@
     <td><%= draw.challenge %></td>
     <td><%= draw.description %></td>
     <td><%= draw.password %></td>
+    <td><%= draw.resolution %></td>
     <td><%= link_to 'Show', draw %></td>
     <td><%= link_to 'Edit', edit_draw_path(draw) %></td>
     <td><%= link_to 'Destroy', draw, :confirm => 'Are you sure?', :method => :delete %></td>
