--- a/Server/app/views/draws/show.html.erb
+++ b/Server/app/views/draws/show.html.erb
@@ -50,6 +50,11 @@
   <%= @draw.password %>
 </p>
 
+<p>
+  <b>resolution:</b>
+  <%= @draw.resolution %>
+</p>
+
 
 <%= link_to 'Edit', edit_draw_path(@draw) %> |
 <%= link_to 'Back', draws_path %>
