Added replace method on server. Now the num_created is saved on user active record. When update deletes records in draw_users of draw

--- a/Server/app/views/users/_form.html.erb
+++ b/Server/app/views/users/_form.html.erb
@@ -40,6 +40,10 @@
     <%= f.number_field :num_success %>
   </div>
   <div class="field">
+    <%= f.label :num_created %><br />
+    <%= f.number_field :num_created %>
+  </div>
+  <div class="field">
     <%= f.label :ranking %><br />
     <%= f.number_field :ranking %>
   </div>
