changed from resolution to density x and y.

--- a/Server/app/views/draws/index.html.erb
+++ b/Server/app/views/draws/index.html.erb
@@ -13,7 +13,8 @@
     <th>Challenge</th>
     <th>Description</th>
     <th>Password</th>
-    <th>Resolution</th>
+    <th>X Density</th>
+    <th>Y Density</th>
     <th></th>
     <th></th>
     <th></th>
@@ -32,7 +33,8 @@
     <td><%= draw.challenge %></td>
     <td><%= draw.description %></td>
     <td><%= draw.password %></td>
-    <td><%= draw.resolution %></td>
+    <td><%= draw.xdensity %></td>
+    <td><%= draw.ydensity %></td>
     <td><%= link_to 'Show', draw %></td>
     <td><%= link_to 'Edit', edit_draw_path(draw) %></td>
     <td><%= link_to 'Destroy', draw, :confirm => 'Are you sure?', :method => :delete %></td>
