--- a/Server/app/views/draws/show.html.erb
+++ b/Server/app/views/draws/show.html.erb
@@ -51,8 +51,13 @@
 </p>
 
 <p>
-  <b>resolution:</b>
-  <%= @draw.resolution %>
+  <b>X Density:</b>
+  <%= @draw.xdensity %>
+</p>
+
+<p>
+  <b>Y Density:</b>
+  <%= @draw.ydensity %>
 </p>
 
 
