--- a/Android/res/layout/newworddialog.xml
+++ b/Android/res/layout/newworddialog.xml
@@ -2,22 +2,22 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:stretchColumns="1">
+    android:stretchColumns="1" android:background="#000000">
 
 
     <TableRow
         android:id="@+id/tableRow1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" android:paddingBottom="20dp">
+        android:layout_gravity="center_horizontal" android:paddingBottom="20dp" android:paddingTop="5dp">
   
      <TextView
          android:id="@+id/easyWord"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
-         android:text="OLA"
-         android:textSize="20dp" />
+         android:text="Easy"
+         android:textSize="20dp" android:textColor="#ffffff" android:paddingLeft="20dp" android:paddingTop="10dp"/>
 
     <ImageView
         android:id="@+id/imgEasy"
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:gravity="right"
-        android:src="@drawable/smallpencil" />
+        android:src="@drawable/smallpencil" android:paddingTop="5dp"/>
    
 	 </TableRow>
     <TableRow  
@@ -38,7 +38,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="left"
-         android:text=""  android:textSize="20dp"/>
+         android:text="Medium"  android:textSize="20dp" android:textColor="#ffffff" android:paddingLeft="20dp" android:paddingTop="10dp"/>
 
     <ImageView
         android:id="@+id/imgMedium1"
@@ -65,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
-        android:text=""  android:textSize="20dp"/>
+        android:text="Hard"  android:textSize="20dp" android:textColor="#ffffff" android:paddingLeft="20dp" android:paddingTop="10dp"/>
 
     <ImageView
         android:id="@+id/imgHard1"
