--- a/Android/res/layout/wordguesseddialog.xml
+++ b/Android/res/layout/wordguesseddialog.xml
@@ -3,33 +3,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-     <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="You guessed the word! Do you want to replace this drawing?"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-
-     <RelativeLayout
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="You guessed the word! Do you want to replace this drawing?"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" android:layout_marginBottom="10dp" android:gravity="center_horizontal|center">
+        android:layout_marginRight="10dp"
+        android:gravity="center_horizontal|center" >
 
-         <Button
-             android:id="@+id/btnYes"
-             android:layout_width="60dp"
-             android:layout_height="wrap_content"
-             android:text="Yes" />
+        <Button
+            android:id="@+id/btnYes"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:text="Yes" />
 
-         <Button
-             android:id="@+id/btnNo"
-             android:layout_width="60dp"
-             android:layout_height="wrap_content"
-             android:layout_alignParentTop="true"
-             android:layout_toRightOf="@+id/btnYes"
-             android:text="No" />
-        
-     </RelativeLayout>
+        <Button
+            android:id="@+id/btnNo"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/btnYes"
+            android:text="No" />
+        <CheckBox
+        android:id="@+id/checkBox1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnYes"
+        android:text="Challenge" />
+
+    </RelativeLayout>
+
+    
+
 </LinearLayout>
