--- a/Android/res/layout/drawcanvas.xml
+++ b/Android/res/layout/drawcanvas.xml
@@ -27,7 +27,7 @@
         <HorizontalScrollView
             android:id="@+id/horizontalScrollView1"
             android:layout_width="250dp"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content" android:scrollbars="none">
 
             <LinearLayout
                 android:id="@+id/colors"
