--- a/Android/res/layout/wordguesseddialog.xml
+++ b/Android/res/layout/wordguesseddialog.xml
@@ -39,8 +39,14 @@
         android:layout_below="@+id/btnYes"
         android:text="Challenge" />
 
-    </RelativeLayout>
+        <ImageView
+            android:id="@+id/coin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/checkBox1"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="81dp" />
 
-    
+    </RelativeLayout>
 
 </LinearLayout>
